# silicon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Documnetation  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  lint.yaml
assets/: LICENSE  README.md
migrations/: env.py
migrations/versions/: 1886ea9538ad_add_unique_constraint_name_brand_number_.py  20b76d603b1f_add_sds_table.py  83d30f3d9b2b_add_product_brand_to_sds.py  bb8e2be0af5b_add_sds_signal_word_column.py  e8961e181613_statements_column.py  ffd5836bb31c_add_sds_hazards_column.py
silicon/: __init__.py  constants.py  models.py
silicon/routes/: __init__.py  healthcheck.py  sds.py
silicon/utils/: cart.py  sds.py  template.tex  templater.py
