[tool.poetry]
name = "silicon"
version = "0.1.0"
description = "The API for MSDS documents."
authors = ["Dennis Pham <dennis@dennispham.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
asyncpg = "^0.26.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
python-decouple = "^3.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
taskipy = "^1.10.3"
flake8-pyproject = "^1.1.0.post0"
pre-commit = "^2.20.0"

[tool.flake8]
max-line-length = 99

[tool.taskipy.tasks]
start = "python -m silicon"
lint = "flake8 ."
pre-commit = "pre-commit install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
