[tool.poetry]
name = "silicon"
version = "0.1.0"
description = "The API for MSDS documents."
authors = ["Dennis Pham <dennis@dennispham.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiobotocore = "^2.5.0"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
fastapi = "^0.85.0"
gunicorn = "^20.1.0"
httpx = "^0.23.1"
jinja2 = "^3.1.2"
pylatexenc = "^2.10"
pypdf2 = "^3.0.1"
python-decouple = "^3.6"
python-multipart = "^0.0.5"
sqlalchemy = { extras = ["asyncio"], version = "^1.4.43" }
tungsten-sds = "^0.8.0"
uvicorn = "^0.18.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
taskipy = "^1.10.3"
flake8-pyproject = "^1.1.0.post0"
pre-commit = "^2.20.0"
types-aiobotocore = {extras = ["s3"], version = "^2.5.0.post2"}

[tool.flake8]
max-line-length = 99
exclude = ["migrations"]

[tool.taskipy.tasks]
start = "uvicorn silicon:app --host 0.0.0.0"
reload = "uvicorn silicon:app --reload --host 0.0.0.0"
lint = "flake8 ."
pre-commit = "pre-commit install"
generate-migration = "alembic revision --autogenerate -m"
migrate = "alembic upgrade head"

[tool.isort]
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
